--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - 5.5
   - 5.6
   - hhvm
-  - nightly
 before_script:
   - composer self-update
   - composer install
+  - cat vendor/composer/autoload_namespaces.php
