--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="./test/Bootstrap.php" colors="true">
+<phpunit bootstrap="./tests/Bootstrap.php" colors="true">
     <testsuites>
-        <testsuite name="itusozluk">
-            <directory>./test</directory>
+        <testsuite name="application">
+            <directory>./application/tests</directory>
+        </testsuite>
+        <testsuite name="framework">
+            <directory>./framework/tests</directory>
         </testsuite>
     </testsuites>
 </phpunit>
